<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s حذف شد</string>
    <string name="mdtp_done_label">انجام شد</string>
    <string name="mdtp_hour_picker_description">لغزنده دایره‌ای ساعت</string>
    <string name="mdtp_item_is_selected">%1$s انتخاب شد</string>
    <string name="mdtp_minute_picker_description">لغزنده دایره‌ای دقیقه</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">انتخاب ساعت</string>
    <string name="mdtp_select_minutes">انتخاب دقیقه</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="ALongTimeAgo">last seen a long time ago</string>
    <string name="AbortPassword">Abort two-step verification setup</string>
    <string name="AccessError">Access error</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="AccurateTo">Accurate to %1$s</string>
    <string name="ActionAddUser">un1 added un2</string>
    <string name="ActionAddUserSelf">un1 returned to the group</string>
    <string name="ActionAddUserSelfMega">un1 joined the group</string>
    <string name="ActionAddUserSelfYou">You returned to the group</string>
    <string name="ActionAddUserYou">un1 added you</string>
    <string name="ActionChangedPhoto">un1 changed the group photo</string>
    <string name="ActionChangedTitle">un1 changed the group name to un2</string>
    <string name="ActionChannelChangedPhoto">Channel photo changed</string>
    <string name="ActionChannelChangedTitle">Channel name changed to un2</string>
    <string name="ActionChannelRemovedPhoto">Channel photo removed</string>
    <string name="ActionCreateChannel">Channel created</string>
    <string name="ActionCreateGroup">un1 created the group</string>
    <string name="ActionCreateMega">Group created</string>
    <string name="ActionInviteUser">un1 joined the group via invite link</string>
    <string name="ActionInviteYou">You joined the group via invite link</string>
    <string name="ActionKickUser">un1 removed un2</string>
    <string name="ActionKickUserYou">un1 removed you</string>
    <string name="ActionLeftUser">un1 left the group</string>
    <string name="ActionMigrateFromGroup">This group was upgraded to a supergroup</string>
    <string name="ActionMigrateFromGroupNotify">%1$s was upgraded to a supergroup</string>
    <string name="ActionPinnedContact">un1 pinned a contact</string>
    <string name="ActionPinnedFile">un1 pinned a file</string>
    <string name="ActionPinnedGame">un1 pinned %1$s</string>
    <string name="ActionPinnedGeo">un1 pinned a map</string>
    <string name="ActionPinnedGif">un1 pinned a GIF</string>
    <string name="ActionPinnedMusic">un1 pinned a track</string>
    <string name="ActionPinnedNoText">un1 pinned a message</string>
    <string name="ActionPinnedPhoto">un1 pinned a photo</string>
    <string name="ActionPinnedRound">un1 pinned a video message</string>
    <string name="ActionPinnedSticker">un1 pinned a sticker</string>
    <string name="ActionPinnedText">un1 pinned \"%1$s\"</string>
    <string name="ActionPinnedVideo">un1 pinned a video</string>
    <string name="ActionPinnedVoice">un1 pinned a voice message</string>
    <string name="ActionRemovedPhoto">un1 removed the group photo</string>
    <string name="ActionTakeScreenshoot">un1 took a screenshot!</string>
    <string name="ActionTakeScreenshootYou">You took a screenshot!</string>
    <string name="ActionUserScored">un1 scored %1$s</string>
    <string name="ActionUserScoredInGame">un1 scored %1$s in un2</string>
    <string name="ActionYouAddUser">You added un2</string>
    <string name="ActionYouChangedPhoto">You changed the group photo</string>
    <string name="ActionYouChangedTitle">You changed the group name to un2</string>
    <string name="ActionYouCreateGroup">You created the group</string>
    <string name="ActionYouKickUser">You removed un2</string>
    <string name="ActionYouLeftUser">You left the group</string>
    <string name="ActionYouRemovedPhoto">You removed the group photo</string>
    <string name="ActionYouScored">You scored %1$s</string>
    <string name="ActionYouScoredInGame">You scored %1$s in un2</string>
    <string name="Add">Add</string>
    <string name="AddAdminErrorBlacklisted">Sorry, you can\'t add this user as an admin because they are in the blacklist and you can\'t unban them.</string>
    <string name="AddAdminErrorNotAMember">Sorry, you can\'t add this user as an admin because they are not a member of this group and you are not allowed to invite them.</string>
    <string name="AddBannedErrorAdmin">Sorry, you can\'t ban this user because they are an admin in this group and you are not allowed to demote them.</string>
    <string name="AddCaption">Add a caption...</string>
    <string name="AddContact">Add</string>
    <string name="AddContactChat">ADD CONTACT</string>
    <string name="AddContactTitle">Add contact</string>
    <string name="AddDownloadManager">Add To Download Manager</string>
    <string name="AddExceptions">Add exceptions</string>
    <string name="AddMasks">Add Masks</string>
    <string name="AddMasksInstalled">New masks added</string>
    <string name="AddMember">Add member</string>
    <string name="AddMutual">Add contacts to your channel</string>
    <string name="AddRecipient">Add recipient</string>
    <string name="AddShortcut">Add shortcut</string>
    <string name="AddStickers">Add Stickers</string>
    <string name="AddStickersInstalled">New stickers added</string>
    <string name="AddStickersNotFound">Stickers not found</string>
    <string name="AddToContacts">Add to contacts</string>
    <string name="AddToDownloadQueue">Add to download queue</string>
    <string name="AddToFav">add to Favorites</string>
    <string name="AddToFavorites">Add to Favorites</string>
    <string name="AddToMasks">Add to Masks</string>
    <string name="AddToStickers">Add to Stickers</string>
    <string name="IdFinder">Id finder</string>
    <string name="app_payment">سامانه پرداخت تلگرام طلایی</string>
    <string name="canceltext">Cancel</string>
    <string name="search">Search</string>
    <string name="hockeyapp_feedback_attachment_button_text">Add Attachment</string>
    <string name="hockeyapp_feedback_email_hint">Email</string>
    <string name="hockeyapp_feedback_last_updated_text">Last Updated: %s</string>
    <string name="hockeyapp_feedback_message_hint">Message</string>
    <string name="hockeyapp_feedback_name_hint">Name</string>
    <string name="hockeyapp_feedback_refresh_button_text">Refresh</string>
    <string name="hockeyapp_feedback_response_button_text">Add a Response</string>
    <string name="hockeyapp_feedback_send_button_text">Send Feedback</string>
    <string name="hockeyapp_feedback_subject_hint">Subject</string>
    <string name="asanpardakht_action_resync_cards_due_error">تلاش مجدد</string>
    <string name="asanpardakht_action_sync_cards">بروزرسانی کارت‌ها</string>
    <string name="asanpardakht_action_through_ussd">USSD</string>
    <string name="asanpardakht_action_through_web">مرورگر</string>
    <string name="asanpardakht_cancel">انصراف</string>
    <string name="asanpardakht_card_no">شماره کارت</string>
    <string name="asanpardakht_expiry">تاریخ انقضا</string>
    <string name="asanpardakht_info_how_to_trust_to_sdk">شما می‌توانید با کد اصالت و استفاده از یکی از روش‌های زیر از اصالت درگاه پرداخت اپلیکیشن فعلی اطمینان حاصل فرمایید.</string>
    <string name="asanpardakht_month">ماه</string>
    <string name="asanpardakht_pay">پرداخت</string>
    <string name="asanpardakht_pin2">رمز دوم</string>
    <string name="asanpardakht_pin2_hint">رمز دوم را وارد کنید</string>
    <string name="asanpardakht_text_syncing_cards">درحال بروزرسانی کارت‌ها</string>
    <string name="asanpardakht_year">‫سال‬</string>
    <string name="HotgramPayment">Payment System</string>
    <string name="settleListReport">Settle Report</string>
    <string name="signup">Signup</string>
    <string name="asanpardakht_card_no_hint">0000–0000–0000–0000</string>
    <string name="asanpardakht_cvv2">CVV2</string>
    <string name="submitAndPay">تایید و پرداخت</string>
    <string name="toman">تومان</string>
</resources>