<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/hockeyapp_background_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_gravity="center" android:id="@+id/wrapper_feedback_scroll" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:id="@+id/wrapper_feedback" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@+id/input_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hockeyapp_feedback_name_hint" android:inputType="textCapSentences" style="@style/HockeyApp_SingleLineInputStyle"/>
            <EditText android:id="@+id/input_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hockeyapp_feedback_email_hint" android:inputType="textEmailAddress" style="@style/HockeyApp_SingleLineInputStyle"/>
            <EditText android:id="@+id/input_subject" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hockeyapp_feedback_subject_hint" android:inputType="none|text|textCapSentences|textUri|textEmailAddress|textEmailSubject" style="@style/HockeyApp_SingleLineInputStyle"/>
            <EditText android:id="@+id/input_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="100dp" android:hint="@string/hockeyapp_feedback_message_hint" style="@style/HockeyApp_EditTextStyle"/>
            <net.hockeyapp.android.views.AttachmentListView android:layout_gravity="start" android:id="@+id/wrapper_attachments" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:id="@+id/button_attachment" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hockeyapp_feedback_attachment_button_text" style="@style/HockeyApp_ButtonStyle"/>
            <Button android:id="@+id/button_send" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/hockeyapp_feedback_send_button_text" style="@style/HockeyApp_ButtonStyle"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:id="@+id/wrapper_messages" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="15sp" android:typeface="normal" android:textColor="@color/hockeyapp_text_normal" android:ellipsize="end" android:id="@+id/label_last_updated" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/hockeyapp_feedback_last_updated_text" android:singleLine="true" android:shadowColor="@color/hockeyapp_background_white" android:shadowDy="1" android:shadowRadius="1"/>
        <LinearLayout android:layout_gravity="start" android:orientation="horizontal" android:id="@+id/wrapper_messages_buttons" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/button_add_response" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:layout_marginBottom="10dp" android:text="@string/hockeyapp_feedback_response_button_text" android:layout_weight="1" style="@style/HockeyApp_ButtonStyle"/>
            <Button android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/button_refresh" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginBottom="10dp" android:text="@string/hockeyapp_feedback_refresh_button_text" android:layout_weight="1" style="@style/HockeyApp_ButtonStyle"/>
        </LinearLayout>
        <ListView android:id="@+id/list_feedback_messages" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>
